add sort and search

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 this is my version of algorithms,because i find most of the codes on my textbook are ugly.i hope i can do better.
+some of the code are done in 2009,i find them in 2011,no guarentee on the code
